@@ -32,6 +32,13 @@ tasks.withType<Jar> {
     }
 }
 
+tasks.withType<JavaCompile> {
+    // use String templates
+    options.compilerArgs.add("--enable-preview")
+//    java.sourceCompatibility = JavaVersion.VERSION_22
+//    java.targetCompatibility = JavaVersion.VERSION_22
+}
+
 tasks {
     assemble {
         dependsOn("shadowJar")
